--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: teal;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: rgb(189, 98, 158);
 }
 
 .App-intro {
